--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="assets/css/screen.css">
     <title>Frédéric Goossens</title>
 </head>
-<body>
+<body class="home">
     <main class="flex_home">
         <div>
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Resume</a></li>
-                    <li><a href="#">HTB Writeups</a></li>
+                    <li><a href="resume.html">Resume</a></li>
+                    <li><a href="htb.html">HackTheBox</a></li>
                     <li><a href="#">Pentest notes</a></li>
                     <li><a href="#">Projects</a></li>
                 </ul>
