Add nav boxes htb

--- a/htb.html
+++ b/htb.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/screen.css">
     <title>Frédéric Goossens</title>
 </head>
-<body>
+<body class="htb">
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -17,19 +17,26 @@
             <li><a href="#">Projects</a></li>
         </ul>
     </nav>
-    <main class="htb">
-        <div>
-
+    <main>
+        <div id="htbLinux">
+            <div>
+                <p>Linux Boxes</p>
+            </div>
         </div>
-        <div>
-            
+        <div id="htbWindows">
+            <div>
+                <p>Windows Boxes</p>
+            </div>
         </div>
-        <div>
-            
+        <div id="htbOther">
+            <div>
+                <p>Other</p>
+            </div>
         </div>
     </main>
     <script src="assets/js/particles.min.js"></script>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/htbNavigate.js"></script>
     <div id="particles-js"></div>
 </body>
 </html>
