--- a/htb.html
+++ b/htb.html
@@ -8,13 +8,12 @@
     <title>Frédéric Goossens</title>
 </head>
 <body class="htb">
-    <nav>
+    <nav class="navSubPages">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="Resume.html">Resume</a></li>
             <li><a href="htb.html">HackTheBox</a></li>
-            <li><a href="#">Pentest notes</a></li>
-            <li><a href="#">Projects</a></li>
+            <li><a href="blogs.html">Blogposts</a></li>
         </ul>
     </nav>
     <main>
