--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
         <div>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="resume.html">Resume</a></li>
                     <li><a href="htb.html">HackTheBox</a></li>
-                    <li><a href="#">Pentest notes</a></li>
-                    <li><a href="#">Projects</a></li>
+                    <li><a href="blogs.html">Blogposts</a></li>
                 </ul>
             </nav>
         </div>
