dynamically load htb writeups

--- a/htbList.html
+++ b/htbList.html
@@ -17,10 +17,11 @@
         </ul>
     </nav>
     <main>
-        <div></div>
+        <ul id="boxList"></ul>
     </main>
     <script src="assets/js/particles.min.js"></script>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/loadBoxes.js"></script>
     <div id="particles-js"></div>
 </body>
 </html>
