--- a/htb.html
+++ b/htb.html
@@ -11,7 +11,7 @@
     <nav class="navSubPages">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="Resume.html">Resume</a></li>
+            <li><a href="resume.html">Resume</a></li>
             <li><a href="htb.html">HackTheBox</a></li>
             <li><a href="blogs.html">Blogposts</a></li>
         </ul>
