ascii art and finetuning

--- a/htbList.html
+++ b/htbList.html
@@ -19,6 +19,9 @@
     <main>
         <ul id="boxList"></ul>
     </main>
+    <footer>
+        <p>note: Write-ups for active boxes are currently unavailable. These write-ups will be gradually released here once the respective boxes are retired.</p>
+    </footer>
     <script src="assets/js/particles.min.js"></script>
     <script src="assets/js/script.js"></script>
     <script src="assets/js/loadBoxes.js"></script>
