--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </nav>
         </div>
         <div class="circle-mask">
-            <img src="assets/images/pfp.jpg" alt="Your Image">
+            <img src="assets/images/pfp.jpg" alt="Profile picture">
         </div>
         <div>
             <h1>$whoami</h1>
