--- a/htb.html
+++ b/htb.html
@@ -21,16 +21,40 @@
             <div>
                 <p>Linux Boxes</p>
             </div>
+            <pre>
+                 .--.
+                |o_o |
+                |:_/ |
+               //   \ \
+              (|     | )
+             /'\_   _/`\
+             \___)=(___/
+            </pre>
         </div>
         <div id="htbWindows">
             <div>
                 <p>Windows Boxes</p>
             </div>
+            <pre>
+
+                 _.-;;-._
+          '-..-'|   ||   |
+          '-..-'|_.-;;-._|
+          '-..-'|   ||   |
+          '-..-'|_.-''-._|
+            </pre>
         </div>
         <div id="htbOther">
             <div>
                 <p>Other</p>
             </div>
+            <pre>  
+                       
+               __  __          
+         ___  / /_/ /  ___ ____
+        / _ \/ __/ _ \/ -_) __/
+        \___/\__/_//_/\__/_/     
+            </pre>
         </div>
     </main>
     <script src="assets/js/particles.min.js"></script>
