added blogpost and changes js classes

--- a/htb.html
+++ b/htb.html
@@ -58,7 +58,7 @@
         </div>
     </main>
     <script src="assets/js/particles.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/particlesConfig.js"></script>
     <script src="assets/js/htbNavigate.js"></script>
     <div id="particles-js"></div>
 </body>
