--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/screen.css">
     <title>Frédéric Goossens</title>
@@ -27,8 +28,15 @@
             <h2 id="typed-text"></h2>
         </div>
     </main>
+    <footer>
+        <div class="social-icons">
+            <a href="https://github.com/FreddyTheNipple" target="_blank" class="icon"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/fr%C3%A9d%C3%A9ric-goossens-0344b1241/" target="_blank" class="icon"><i class="fab fa-linkedin"></i></a>
+        </div>
+    </footer>
     <script src="assets/js/particles.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/particlesConfig.js"></script>
+    <script src="assets/js/typewrite.js"></script>
     <div id="particles-js"></div>
 </body>
 </html>
