--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,7 @@
     </main>
     <div></div>
     <script src="assets/js/particles.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/particlesConfig.js"></script>
     <div id="particles-js"></div>
 </body>
 </html>
