--- a/htbList.html
+++ b/htbList.html
@@ -23,7 +23,7 @@
         <p>note: Write-ups for active boxes are currently unavailable. These write-ups will be gradually released here once the respective boxes are retired.</p>
     </footer>
     <script src="assets/js/particles.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/particlesConfig.js"></script>
     <script src="assets/js/loadBoxes.js"></script>
     <div id="particles-js"></div>
 </body>
