--- a/blogs/rastalabs.html
+++ b/blogs/rastalabs.html
@@ -17,11 +17,11 @@
         </ul>
     </nav>
     <main>
-        <div>
+        <div id="info">
             <a href="#" onclick="history.go(-1);">← Go back</a>
             <span>🕑 Read time: 2 minutes</span>
             <span>📅 May 19, 2022</span>
-            <span>Frédéric Goossens</span>
+            <span>✏️ Frédéric Goossens</span>
         </div>
 
         <h1 id="typed-text">#</h1>
@@ -53,6 +53,7 @@
             <p>Completing RastaLabs was an unparalleled adventure that accelerated my learning at a remarkable pace. The lab introduced me to cutting-edge techniques and challenged me to grasp new concepts swiftly. It was a dynamic and immersive experience that deepened my understanding of cybersecurity and propelled my growth in the field. Additionally, the global community I became a part of added an invaluable collaborative element to my journey. I am genuinely grateful for the knowledge gained, the connections made, and the exciting future ahead as I continue to explore the ever-evolving landscape of cybersecurity.</p>
         </section>
     </main>
+    <footer></footer>
     <script src="../assets/js/particles.min.js"></script>
     <script src="../assets/js/typewrite.js"></script>
     <script src="../assets/js/particlesConfig.js"></script>
