--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     <main class="flex_home">
         <div>
             <nav>
-                <ul>
+                <ul class="nav-links hidden">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="resume.html">Resume</a></li>
                     <li><a href="htb.html">HackTheBox</a></li>
                     <li><a href="blogs.html">Blogposts</a></li>
                 </ul>
+                <div class="hamburger-menu">
+                    <i class="fas fa-bars"></i>
+                </div>
             </nav>
         </div>
         <div class="circle-mask">
@@ -37,6 +40,7 @@
     <script src="assets/js/particles.min.js"></script>
     <script src="assets/js/particlesConfig.js"></script>
     <script src="assets/js/typewrite.js"></script>
+    <script src="assets/js/mobileNav.js"></script>
     <div id="particles-js"></div>
 </body>
 </html>
