--- a/htb.html
+++ b/htb.html
@@ -9,12 +9,15 @@
 </head>
 <body class="htb">
     <nav class="navSubPages">
-        <ul>
+        <ul class="nav-links hidden">
             <li><a href="index.html">Home</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="htb.html">HackTheBox</a></li>
             <li><a href="blogs.html">Blogposts</a></li>
         </ul>
+        <div class="hamburger-menu">
+            <i class="fas fa-bars"></i>
+        </div>
     </nav>
     <main>
         <div id="htbLinux">
@@ -60,6 +63,7 @@
     <script src="assets/js/particles.min.js"></script>
     <script src="assets/js/particlesConfig.js"></script>
     <script src="assets/js/htbNavigate.js"></script>
+    <script src="assets/js/mobileNav.js"></script>
     <div id="particles-js"></div>
 </body>
 </html>
