--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/screen.css">
-    <title>Frédéric Goossens</title>
+    <title>Frédéric Goossens | Home</title>
 </head>
 <body class="home">
     <main class="flex_home">
