--- a/htbList.html
+++ b/htbList.html
@@ -3,18 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/screen.css">
-    <title>Frédéric Goossens</title>
+    <title>Frédéric Goossens | HTB</title>
 </head>
 <body>
     <nav class="navSubPages">
-        <ul>
+        <ul class="nav-links hidden">
             <li><a href="index.html">Home</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="htb.html">HackTheBox</a></li>
             <li><a href="blogs.html">Blogposts</a></li>
         </ul>
+        <div class="hamburger-menu">
+            <i class="fas fa-bars"></i>
+        </div>
     </nav>
     <main>
         <ul id="boxList"></ul>
@@ -25,6 +29,7 @@
     <script src="assets/js/particles.min.js"></script>
     <script src="assets/js/particlesConfig.js"></script>
     <script src="assets/js/loadBoxes.js"></script>
+    <script src="assets/js/mobileNav.js"></script>
     <div id="particles-js"></div>
 </body>
 </html>
