--- a/resume.html
+++ b/resume.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/screen.css">
-    <title>Frédéric Goossens</title>
+    <title>Frédéric Goossens | Resume</title>
 </head>
 <body class="roadmap">
     <nav class="navSubPages">
@@ -57,7 +58,6 @@
             </div>
         </div>
     </main>
-    <div></div>
     <script src="assets/js/particles.min.js"></script>
     <script src="assets/js/particlesConfig.js"></script>
     <script src="assets/js/mobileNav.js"></script>
