--- a/blogs/rastalabs.html
+++ b/blogs/rastalabs.html
@@ -15,6 +15,7 @@
             <li><a href="../resume.html">Resume</a></li>
             <li><a href="../htb.html">HackTheBox</a></li>
             <li><a href="../blogs.html">Blogposts</a></li>
+            <li><a href="useCases.html">Use Cases</a></li>
         </ul>
         <div class="hamburger-menu">
             <i class="fas fa-bars"></i>
