--- a/useCases.html
+++ b/useCases.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/screen.css">
-    <title>Frédéric Goossens | Resume</title>
+    <title>Frédéric Goossens | HTB</title>
 </head>
-<body class="roadmap">
+<body class="blogs">
     <nav class="navSubPages">
         <ul class="nav-links hidden">
             <li><a href="index.html">Home</a></li>
@@ -23,39 +23,35 @@
     </nav>
     <main>
         <div>
-            <div class="circle-mask-2">
-                <img src="assets/images/davinci.jpg" alt="Your Image">
-            </div>
             <div>
-                <p>Scholen Da Vinci [2020]</p>
-                <span>Human Sciences student</span>
+                <p>Using OpenWRT to make a RPI<br>wireless access point - TODO</p>
+            </div>
+            <div class="usecase-mask">
+                <img src="assets/images/openwrt_rpi.png" alt="">
             </div>
         </div>
         <div>
-            <div class="circle-mask-2">
-                <img src="assets/images/howest.jpg" alt="Your Image">
-            </div>
             <div>
-                <p>Howest [2020-2023]</p>
-                <span>Cybersecurity student</span>
+                <p>Vulnerable AD Lab - TODO</p>
+            </div>
+            <div class="usecase-mask">
+                <img src="assets/images/openwrt_rpi.png" alt="">
             </div>
         </div>
         <div>
-            <div class="circle-mask-2">
-                <img src="assets/images/davinsi.png" alt="Your Image">
-            </div>
             <div>
-                <p>Davinsi Labs [2023]</p>
-                <span>Intern - Offensive security</span>
+                <p>Pi-Fi Arsenal: Raspberry Pi for<br>Wi-Fi Hacking - TODO</p>
+            </div>
+            <div class="usecase-mask">
+                <img src="assets/images/openwrt_rpi.png" alt="">
             </div>
         </div>
         <div>
-            <div class="circle-mask-2">
-                <img src="assets/images/davinsi.png" alt="Your Image">
-            </div>
             <div>
-                <p>Davinsi Labs [2023-NOW]</p>
-                <span>Security Specialist / Pentester</span>
+                <p>Some custom pentest scripts - TODO</p>
+            </div>
+            <div class="usecase-mask">
+                <img src="assets/images/openwrt_rpi.png" alt="">
             </div>
         </div>
     </main>
