--- a/useCases.html
+++ b/useCases.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/screen.css">
     <title>Frédéric Goossens | HTB</title>
 </head>
-<body class="blogs">
+<body class="usecases">
     <nav class="navSubPages">
         <ul class="nav-links hidden">
             <li><a href="index.html">Home</a></li>
@@ -25,7 +25,7 @@
     <main>
         <div>
             <div>
-                <p>Using OpenWRT to make a RPI<br>wireless access point - TODO</p>
+                <p>OpenWRT: RPI access point</p>
             </div>
             <div class="usecase-mask">
                 <img src="assets/images/openwrt_rpi.png" alt="">
@@ -33,7 +33,7 @@
         </div>
         <div>
             <div>
-                <p>Vulnerable AD Lab - TODO</p>
+                <p>Vulnerable Active Directory Lab</p>
             </div>
             <div class="usecase-mask">
                 <img src="assets/images/openwrt_rpi.png" alt="">
@@ -41,7 +41,7 @@
         </div>
         <div>
             <div>
-                <p>Pi-Fi Arsenal: Raspberry Pi for<br>Wi-Fi Hacking - TODO</p>
+                <p>Pi-Fi Arsenal: RPI WiFi Hacking</p>
             </div>
             <div class="usecase-mask">
                 <img src="assets/images/openwrt_rpi.png" alt="">
@@ -49,7 +49,7 @@
         </div>
         <div>
             <div>
-                <p>Some custom pentest scripts - TODO</p>
+                <p>Some scripts</p>
             </div>
             <div class="usecase-mask">
                 <img src="assets/images/openwrt_rpi.png" alt="">
