--- a/blogs/ai-ndhoven.html
+++ b/blogs/ai-ndhoven.html
@@ -122,7 +122,7 @@
     <script src="../assets/js/particles.min.js"></script>
     <script src="../assets/js/particlesConfig.js"></script>
     <script src="../assets/js/typewrite.js"></script>
-    <script src="assets/js/mobileNav.js"></script>
+    <script src="../assets/js/mobileNav.js"></script>
     <div id="particles-js"></div>
 </body>
 </html>
